<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView_main_content"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true" >

	<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         
	    <TextView
	        android:id="@+id/textView_result_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="20dp"
	        android:layout_marginTop="14dp"
	        android:text="@string/result_title"
	        android:textSize="14pt" />

	    <TextView
	        android:id="@+id/textView_fullName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@id/textView_result_title"
	        android:layout_alignLeft="@id/textView_result_title"
	        android:layout_marginTop="14dp"
	        android:text="@string/fullName"
	        />
		<TextView
	        android:id="@+id/textView_fullName_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@id/textView_fullName"
	        android:layout_marginLeft="50dp"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_birthdate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_fullName_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/birthdate"
	        />
		<TextView
	        android:id="@+id/textView_birthdate_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_birthdate"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_sex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_birthdate_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/sex"
	        />
		<TextView
	        android:id="@+id/textView_sex_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_sex"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_post"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_sex_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/post"
	        />
		<TextView
	        android:id="@+id/textView_post_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_post"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_salary"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_post_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/salary"
	        />
		<TextView
	        android:id="@+id/textView_salary_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_salary"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_phone"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_salary_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/phone"
	        />
		<TextView
	        android:id="@+id/textView_phone_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_phone"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_email"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_phone_result"
	        android:layout_alignLeft="@+id/textView_fullName"
	        android:layout_marginTop="14dp"
	        android:text="@string/email"
	        />
		<TextView
	        android:id="@+id/textView_email_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_email"
	        android:layout_alignLeft="@+id/textView_fullName_result"
	        android:layout_marginTop="5dp"
	        android:textColor="#0086ff"
	        android:text="@string/sample_string"
	        />
		<TextView
	        android:id="@+id/textView_response_text_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_below="@+id/textView_email_result"
	        android:layout_centerHorizontal="true"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
	        android:layout_marginTop="14dp"
	        android:text="@string/response_text_title"
	        android:textSize="14pt" />

		<EditText
		    android:id="@+id/editText_response_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_response_text_title"
		    android:layout_alignRight="@+id/textView_response_text_title"
		    android:layout_below="@+id/textView_response_text_title"
		    android:ems="10"
		    android:hint="@string/response_text_hint"
		    android:inputType="textMultiLine"
		    android:gravity="top"
		    android:minLines="5">

		</EditText>
		<Button
		    android:id="@+id/button_send_response"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_alignLeft="@+id/textView_response_text_title"
		    android:layout_alignRight="@+id/textView_response_text_title"
		    android:layout_below="@+id/editText_response_text"
		    android:layout_marginTop="14dp"
		    android:text="@string/button_send_response" 
		    />

	</RelativeLayout>
</ScrollView>